--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-"Hello World" 
+<!doctype html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+<title>Melissa Lajoie - Full Stack Developer</title>
+<link href="css/reset.css" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="css/main.css" rel="stylesheet" type="text/css">
+<script src="https://kit.fontawesome.com/9f0001ec72.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/ScrollToPlugin.min.js"></script>
+</head>
+
+<body class="container-fluid">
+<header>
+	<div class="header">
+		<!-- <img src="images/logo white.png" alt="logo" class="logo"> -->
+		<h1 class="hello">Hello. I am <br> <span class="name">Melissa</span>.</h1>
+	</div>
+</header>
+
+<section id="about" class="about">
+	<div class="row">
+		<div class="col-md-7">
+			<h2>About<br><span class="name">Me</span>.</h2>
+			<p>I am a full stack developer currently located in London, Ontario.</p>
+			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team as well as clients to find the best solution.</p>
+			<p>I am also a bee, tree and tea enthusiast.</p>
+			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><i class="fab fa-linkedin"></i></a> | <a href="mailto:info@melissalajoie.com"><i class="fas fa-envelope"></i></a></p>
+		</div>
+	</div>
+</section>
+
+<script src="js/TweenMax.min.js"></script>
+<script src="js/main.js"></script>
+</body>
+</html>
