fix some accessibility issues and delete unnecessary files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
@@ -16,7 +16,6 @@
 <body class="container-fluid">
 <header>
 	<div class="header">
-		<!-- <img src="images/logo white.png" alt="logo" class="logo"> -->
 		<h1 class="hello">Hello. I am <br> <span class="name">Melissa</span>.</h1>
 	</div>
 </header>
@@ -28,7 +27,7 @@
 			<p>I am a full stack developer currently located in London, Ontario.</p>
 			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team as well as clients to find the best solution.</p>
 			<p>I am also a bee, tree and tea enthusiast.</p>
-			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><i class="fab fa-linkedin"></i></a> | <a href="mailto:info@melissalajoie.com"><i class="fas fa-envelope"></i></a></p>
+			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><i class="fab fa-linkedin" aria-hidden="true"></i></a> | <a href="mailto:info@melissalajoie.com"><i class="fas fa-envelope" aria-hidden="true"></i></a></p>
 		</div>
 	</div>
 </section>
