--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<p>I am a full stack developer currently located in London, Ontario.</p>
 			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team as well as clients to find the best solution.</p>
 			<p>I am also a bee, tree and tea enthusiast.</p>
-			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><i class="fab fa-linkedin" aria-hidden="true"></i></a> | <a href="mailto:info@melissalajoie.com"><i class="fas fa-envelope" aria-hidden="true"></i></a></p>
+			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><i class="fab fa-linkedin" aria-hidden="true"></i></a> | <a href="mailto:lajoie.developer@gmail.com"><i class="fas fa-envelope" aria-hidden="true"></i></a></p>
 		</div>
 	</div>
 </section>
