add javascript arrow

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <header>
 	<div class="header">
 		<h1 class="hello">Hello. I am <br> <span class="name">Melissa</span>.</h1>
+		<em class="fas fa-arrow-circle-down" aria-hidden="true" id="arrow"></em>
 	</div>
 </header>
 
@@ -28,7 +29,7 @@
 			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team as well as clients to find the best solution.</p>
 			<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary certification Interactive Media Specialist from Fanshawe College.</p>
 			<p>I am also a bee, tree and tea enthusiast.</p>
-			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><i class="fab fa-linkedin" aria-hidden="true"></i></a> | <a href="mailto:lajoie.developer@gmail.com"><i class="fas fa-envelope" aria-hidden="true"></i></a></p>
+			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><em class="fab fa-linkedin" aria-hidden="true"></em></a> | <a href="mailto:lajoie.developer@gmail.com"><em class="fas fa-envelope" aria-hidden="true"></em></a></p>
 		</div>
 	</div>
 </section>
