add profile image to background

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		<div class="col-md-7">
 			<h2>About<br><span class="name">Me</span>.</h2>
 			<p>I am a full stack developer currently located in London, Ontario.</p>
-			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team as well as clients to find the best solution.</p>
+			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team and clients to find the best solutions.</p>
 			<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary certification Interactive Media Specialist from Fanshawe College.</p>
 			<p>I am also a bee, tree and tea enthusiast.</p>
-			<p><a href="https://www.linkedin.com/in/melissa-lajoie/"><em class="fab fa-linkedin" aria-hidden="true"></em></a> | <a href="mailto:lajoie.developer@gmail.com"><em class="fas fa-envelope" aria-hidden="true"></em></a></p>
+			<p><a href="https://www.linkedin.com/in/melissa-lajoie/" target="_blank"><em class="fab fa-linkedin" aria-hidden="true"></em></a> | <a href="mailto:lajoie.developer@gmail.com"><em class="fas fa-envelope" aria-hidden="true"></em></a></p>
 		</div>
 	</div>
 </section>
