update wording, js speed and switch to using em

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-<title>Melissa Lajoie - Full Stack Developer</title>
-<link href="css/reset.css" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link href="css/main.css" rel="stylesheet" type="text/css">
-<script src="https://kit.fontawesome.com/9f0001ec72.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/ScrollToPlugin.min.js"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+	<title>Melissa Lajoie - Full Stack Developer</title>
+	<link href="css/reset.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<script src="https://kit.fontawesome.com/9f0001ec72.js" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenLite.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/plugins/ScrollToPlugin.min.js"></script>
 </head>
 
 <body class="container-fluid">
@@ -26,15 +26,19 @@
 		<div class="col-md-7">
 			<h2>About<br><span class="name">Me</span>.</h2>
 			<p>I am a full stack developer currently located in London, Ontario.</p>
-			<p>I have a passion for inovation and creativity. I have worked on a multitude of intranet product websites built on top of Drupal, playing the bridge between the internal development team and clients to find the best solutions.</p>
-			<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary certification Interactive Media Specialist from Fanshawe College.</p>
+			<p>I have a passion for innovation and creativity. I have experience in project management, module development, sales demoing, and collaborating with multidisciplinary groups to create new solutions. I'm interested in productized solutions that make life simplier.</p>
+			<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary Interactive Media Specialist certification from Fanshawe College.</p>
 			<p>I am also a bee, tree and tea enthusiast.</p>
-			<p><a href="https://www.linkedin.com/in/melissa-lajoie/" target="_blank"><em class="fab fa-linkedin" aria-hidden="true"></em></a> | <a href="mailto:lajoie.developer@gmail.com"><em class="fas fa-envelope" aria-hidden="true"></em></a></p>
 		</div>
 	</div>
 </section>
 
+<footer>
+	<p>Connect with me: <a href="https://www.linkedin.com/in/melissa-lajoie/" target="_blank"><em class="fab fa-linkedin" aria-hidden="true"></em></a> | <a href="mailto:lajoie.developer@gmail.com"><em class="fas fa-envelope" aria-hidden="true"></em></a></p>
+</footer>
+
 <script src="js/TweenMax.min.js"></script>
 <script src="js/main.js"></script>
+
 </body>
 </html>
