update brand yellow

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <section id="about" class="flex-container">
 	<div class="row">
 		<div class="about item">
-			<h2>About<br><span class="name">Me</span>.</h2>
+			<h2>About<br><span class="header-accent">Me</span>.</h2>
 			<p>I am a full stack developer currently located in London, Ontario and working remotely.</p>
-			<p>I have a passion for innovation and creativity. I have experience in project management, module development, sales demoing, and collaborating with multidisciplinary groups to create new solutions. I'm interested in productized solutions that make life simplier.</p>
+			<p>I have a passion for innovation and creativity. I have experience in project management, module development, sales demos, quality assurance and collaborating with multidisciplinary groups to create new solutions. I'm interested in productized solutions that make life simplier.</p>
 			<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary Interactive Media Specialist certification from Fanshawe College.</p>
 			<p>I am also a bee, tree and tea enthusiast.</p>
 		</div>
