--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 	<div class="row">
 		<div class="about item">
 			<h2>About<br><span class="header-accent">Me</span>.</h2>
-			<p>I am a full stack developer currently located in London, Ontario and working remotely.</p>
-			<p>I have a passion for innovation and creativity. I have experience in project management, module development, sales demos, quality assurance and collaborating with multidisciplinary groups to create new solutions. I'm interested in productized solutions that make life simplier.</p>
-			<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary Interactive Media Specialist certification from Fanshawe College.</p>
-			<p>I am also a bee, tree and tea enthusiast.</p>
+			<div class="description">
+				<p>I am a full stack developer currently located in London, Ontario and working remotely.</p>
+				<p>I have a passion for innovation and creativity. I have experience in project management, product ownership, module development, sales demos, quality assurance and collaborating with multidisciplinary groups to create new and exciting solutions. I'm interested in productized solutions that make life simplier.</p>
+				<p>I attended the University of Windsor where I recieved my Bachelor's degree in Communications, Media & Film followed by a post-secondary Interactive Media Specialist certification from Fanshawe College. I am Acquia Certified in Drupal 8 Development and NNg UX certified. </p>
+				<p>I am also a bee, tree and tea enthusiast!</p>
+			</div>
 		</div>
 	</div>
 </section>
